# aura-rf

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
data/raw/presence/: metadata.yaml
models/: tier1_features.yaml  tier1_metrics.json
scripts/: generate_data.py  train_model.py
src/models/: random_forest.py
src/processing/: features.py  preprocessing.py
src/simulation/: csi_generator.py
src/utils/: io.py  logger.py
